# sksat-bot-discord

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml
.github/workflows/: build-image.yml
src/: main.rs
