[package]
name = "sksat-bot-discord"
version = "0.1.0"
authors = ["sksat <sksat@sksat.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.117"
serenity = { version = "0.9.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "0.2", features = ["macros"] }
toml = "0.5.7"
